# StarForge

./: .cargo-mutants.toml  API_REFERENCE.md  ARCHITECTURE.md  AUDIT_TRAIL_DOCUMENTATION.md  BENCHMARKS.md  BUILD_TROUBLESHOOTING.md  COMMIT_MSG.txt  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_E2E_TESTS_QUICK_REFERENCE.txt  DEPLOYMENT_PREPARATION_TEST_COVERAGE.md  DEVELOPER_GUIDE.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  Documentation.md  ENCRYPTION_FIX_SUMMARY.txt  FUZZING_GUIDE.md  GAS_OPTIMIZATION_GUIDE.md  PLUGIN_TRUST.md  PR_DESCRIPTION.md  QUICK_START_TEMPLATES.md  README.md  ROLLBACK_TESTING.md  SECURITY_LOGGING_AUDIT.md  SECURITY_LOGGING_BEST_PRACTICES.md  SECURITY_LOGGING_GUIDE.md  SHELL_COMPLETIONS.md  TELEMETRY_PRIVACY.md  TEMPLATE_CONTRIBUTING.md  TEMPLATE_MARKETPLACE.md  TEMPLATE_MARKETPLACE_TEST_COVERAGE.md  TEMPLATE_TESTS_QUICK_REFERENCE.txt  TODO.md  WALLET_E2E_TESTS_QUICK_REFERENCE.txt  WALLET_ENCRYPTION_FIX.md  WALLET_LIFECYCLE_E2E_TEST_COVERAGE.md  build.rs  deny.toml  docker-compose.yml  (+1 more)
.github/workflows/: ci.yml  deploy-verify.yml  fuzzing.yml  release.yml  verify.yml
.kiro/specs/access-control-management/: .config.kiro  requirements.md
.kiro/specs/contract-state-explorer/: .config.kiro  requirements.md
benches/: benchmarks.rs
crates/starforge-plugin-sdk/: Cargo.toml
crates/starforge-plugin-sdk/src/: lib.rs
docs/: COMMAND_REFERENCE.md  GAS_OPTIMIZATION_BEST_PRACTICES.md  GOVERNANCE.md
examples/: deploy-manifest.json  governance-upgrade-workflow.md  operations.json  plugin_example.md
fuzz/: Cargo.toml
fuzz/corpus/fuzz_encrypted_bundle_parse/: bundle_3part  bundle_5part
fuzz/corpus/fuzz_passphrase_strength/: strong
fuzz/corpus/fuzz_validate_amount/: negative
fuzz/corpus/fuzz_validate_public_key/: valid_key  wrong_prefix
fuzz/dicts/: stellar_keys.dict
fuzz/fuzz_targets/: fuzz_encrypted_bundle_parse.rs  fuzz_passphrase_strength.rs  fuzz_template_operations.rs  fuzz_validate_amount.rs  fuzz_validate_contract_id.rs  fuzz_validate_public_key.rs  fuzz_validate_secret_key.rs  fuzz_validate_wallet_name.rs  fuzz_wasm_hash.rs
packaging/homebrew/: starforge.rb
scripts/: coverage.sh  e2e-smoke.sh
src/: main.rs
src/commands/: approval.rs  audit.rs  backup.rs  benchmark.rs  bridge.rs  command_tree.rs  completions.rs  config.rs  contract.rs  debug.rs  deploy.rs  deployments.rs  diagnostics.rs  docs.rs  gas.rs  governance.rs  info.rs  inspect.rs  invoke.rs  lint.rs  migrate.rs  mod.rs  monitor.rs  multisig_builder.rs  network.rs  new.rs  node.rs  orchestrate.rs  perf.rs  pipeline_builder.rs  plugin.rs  registry.rs  schedule.rs  security.rs  shell.rs  simulate.rs  social.rs  telemetry.rs  template.rs  test.rs  (+6 more)
src/plugins/: interface.rs  loader.rs  manifest.rs  mod.rs  registry.rs
src/utils/: approval_engine.rs  audit.rs  backup.rs  benchmarking.rs  bindings.rs  call_graph.rs  compliance.rs  config.rs  confirmation.rs  contract_assertions.rs  contract_deps.rs  contract_fixtures.rs  contract_mocks.rs  contract_profiler.rs  contract_test_framework.rs  contract_test_runner.rs  contract_testing.rs  cost_estimation.rs  crypto.rs  database.rs  debugger.rs  deploy_history.rs  deploy_orchestrator.rs  deployment_verify.rs  doc_api_ref.rs  doc_extractor.rs  doc_generator.rs  doc_html.rs  doc_publisher.rs  doc_templates.rs  documentation.rs  gas_analyzer.rs  gas_report.rs  governance.rs  hardware_wallet.rs  horizon.rs  http_client.rs  logging.rs  mnemonic.rs  mock_soroban.rs  (+32 more)
src/utils/bridge/: mod.rs  monitoring.rs  providers.rs  routes.rs  security.rs  state.rs
src/utils/network_simulator/: deterministic.rs  failure.rs  mod.rs  scenarios.rs  simulator.rs  state.rs  time.rs
src/utils/security/: anomaly.rs  audit.rs  checklist.rs  event_rules.rs  hardening.rs  incident.rs  mod.rs  patterns.rs  pentest.rs  remediation.rs  report.rs  threat_intel.rs  validation.rs
templates/: README.md  registry.json  registry.schema.json
templates/examples/dao-governance/: Cargo.toml  README.md
templates/examples/dao-governance/src/: lib.rs
templates/examples/escrow/: README.md
templates/examples/escrow/src/: lib.rs
templates/examples/multisig-vault/: README.md
templates/examples/multisig-vault/src/: lib.rs
templates/examples/nft/: README.md
templates/examples/nft/src/: lib.rs
templates/examples/sep41-token/: README.md
templates/examples/sep41-token/src/: lib.rs
templates/examples/staking/: Cargo.toml  README.md
templates/examples/staking/src/: lib.rs
templates/examples/token-allowlist/: README.md
templates/examples/token-allowlist/src/: lib.rs
tests/: bridge_integration.rs  cli_smoke.rs  contract_coverage_analysis.rs  contract_framework_integration.rs  contract_rollback_testing.rs  contract_testing_automation.rs  contract_testing_framework.rs  deploy_wasm_hash_test.rs  deployment_error_handling.rs  deployment_orchestration.rs  deployment_preparation_e2e.rs  deployment_verification.rs  hardware_wallet_integration.rs  multisig_builder_ui.rs  network_simulation.rs  pipeline_builder.rs  plugin_compatibility.rs  plugin_lifecycle_e2e.rs  plugin_loading_diagnostics.rs  property_tests.rs  run-tests.ps1  security_audit_integration.rs  security_hardening.rs  security_logging_audit.rs  security_monitoring.rs  template_marketplace_comprehensive.rs  template_marketplace_test.rs  template_marketplace_workflows.rs  wallet_encryption_integration.rs  wallet_error_handling.rs  wallet_lifecycle_e2e.rs
tests/fixtures/: README.md
tests/fixtures/soroban_rpc/: get_ledger_entries_empty.json  get_ledger_entries_success.json  rpc_error.json  simulate_error_in_results.json  simulate_error_top_level.json  simulate_success.json
tutorials/deploy/: README.md  tutorial.json
tutorials/hello-world/: README.md  tutorial.json
