[package]
name = "starforge"
version = "0.1.0"
edition = "2021"
description = "A developer productivity CLI for Stellar and Soroban workflows"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/starforge"
keywords = ["stellar", "soroban", "blockchain", "cli", "web3"]

[[bin]]
name = "starforge"
path = "src/main.rs"

# Package-wide lint policy. These lints are intentionally relaxed for the crate
# (including integration tests, which use lightweight mock structs and helpers).
# Centralizing them here keeps `cargo clippy --all-targets -- -D warnings` green.
[lints.rust]
dead_code = "allow"
unused_imports = "allow"
unused_variables = "allow"

[lints.clippy]
needless_range_loop = "allow"
redundant_closure = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
unnecessary_lazy_evaluations = "allow"
items_after_test_module = "allow"
needless_borrow = "allow"
needless_borrows_for_generic_args = "allow"
empty_line_after_doc_comments = "allow"
expect_fun_call = "allow"
useless_vec = "allow"
single_match = "allow"

[dependencies]
clap     = { version = "=4.4.18", features = ["derive", "color"] }
serde    = { version = "1.0",     features = ["derive"] }
serde_json = "1.0"
toml     = "=0.8.8"
colored  = "=2.1.0"
dirs     = "=5.0.1"
anyhow   = "1.0"
chrono   = { version = "0.4", features = ["serde"] }
rand     = "0.8"
ed25519-dalek = "=2.0.0"
ureq       = { version = "=2.7.1", features = ["json"] }
ctrlc      = "3.4"
clap_complete  = "=4.4.10"
dialoguer  = { version = "0.11", features = ["fuzzy-select", "password"] }
aes-gcm = "0.10.3"
argon2 = "0.5.3"
stellar-strkey = "=0.0.9"
stellar-xdr = { version = "22.0.0", features = ["serde"] }
base64     = "0.21"
urlencoding = "2.1"
sha2 = "0.10"
indicatif = "0.17.7"
libloading = "0.8.1"
uuid = { version = "1.6.1", features = ["v4"] }
hidapi = { version = "2.6.5", optional = true }
trezor-client = { version = "0.1.5", default-features = false, features = ["stellar"], optional = true }
zxcvbn = "=3.1.0"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
bip39 = { version = "2", features = ["rand", "std"] }
hmac = "0.12"
rustyline = "14.0.0"
zip = "0.6"
tempfile = "3.8"

[features]
hardware-wallet = ["dep:hidapi", "dep:trezor-client"]

[dev-dependencies]
criterion = "0.5.1"
tempfile = "3.8"
mockito = "1.2"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true

[build-dependencies]
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.4.10"
