[package]
name = "starforge-fuzz"
version = "0.0.1"
edition = "2021"
publish = false

# cargo-fuzz requires the fuzzing profile to be set up this way.
[package.metadata]
cargo-fuzz = true

[dependencies]
# Main crate (rlib) linked into every harness.
starforge = { path = "..", features = [] }

# LibFuzzer integration (provided by cargo-fuzz; uses LLVM libFuzzer).
libfuzzer-sys = "0.4"

# Structured fuzzing via `arbitrary` derive macro.
arbitrary = { version = "1.3", features = ["derive"] }

# SHA-2 and hex for harnesses that reimplement the WASM hash independently.
sha2 = "0.10"
hex  = "0.4"

# ── Fuzz targets ─────────────────────────────────────────────────────────────
# Each [[bin]] entry corresponds to a file under fuzz/fuzz_targets/.
# Run a specific target with:
#   cargo fuzz run fuzz_validate_public_key

[[bin]]
name = "fuzz_validate_public_key"
path = "fuzz_targets/fuzz_validate_public_key.rs"
test = false
doc  = false

[[bin]]
name = "fuzz_validate_secret_key"
path = "fuzz_targets/fuzz_validate_secret_key.rs"
test = false
doc  = false

[[bin]]
name = "fuzz_validate_contract_id"
path = "fuzz_targets/fuzz_validate_contract_id.rs"
test = false
doc  = false

[[bin]]
name = "fuzz_validate_wallet_name"
path = "fuzz_targets/fuzz_validate_wallet_name.rs"
test = false
doc  = false

[[bin]]
name = "fuzz_validate_amount"
path = "fuzz_targets/fuzz_validate_amount.rs"
test = false
doc  = false

[[bin]]
name = "fuzz_passphrase_strength"
path = "fuzz_targets/fuzz_passphrase_strength.rs"
test = false
doc  = false

[[bin]]
name = "fuzz_wasm_hash"
path = "fuzz_targets/fuzz_wasm_hash.rs"
test = false
doc  = false

[[bin]]
name = "fuzz_encrypted_bundle_parse"
path = "fuzz_targets/fuzz_encrypted_bundle_parse.rs"
test = false
doc  = false

[[bin]]
name = "fuzz_template_operations"
path = "fuzz_targets/fuzz_template_operations.rs"
test = false
doc  = false
